# antlang

./: .gitignore  CMakeLists.txt  README.md  buildfile  install-deps.sh  manifest
antlang/: CMakeLists.txt  alternative.hpp  alternative_parser.cpp  alternative_parser.hpp  ast.hpp  ast_parser.hpp  ast_rules.hpp  buildfile  compiler.cpp  compiler.hpp  condition_compiler.cpp  discard_parser.hpp  evaluation_compiler.cpp  exceptional.hpp  exceptions.hpp  expression_compiler.cpp  formatting.cpp  formatting.hpp  function_compiler.cpp  fundamental_types.hpp  literal_compiler.cpp  literal_parser.cpp  literal_parser.hpp  literal_rule.hpp  longest_common_prefix.hpp  match.hpp  match_parser.hpp  parameter_compiler.cpp  parser.hpp  parser_result.hpp  pre_processing.cpp  pre_processing.hpp  program_compiler.cpp  recursive_variant.hpp  reference_compiler.cpp  repetition.hpp  repetition_parser.hpp  rules.hpp  runtime.cpp  runtime.hpp  (+20 more)
programs/: CMakeLists.txt  antpile.cpp  buildfile
scripts/: build  configure  install  test
snippets/: count.ant  fibonacci-iter.ant  fibonacci.ant  structure.ant  sum-iter-buggy.ant  sum-iter.ant  sum.ant
tests/: CMakeLists.txt  buildfile  test.cpp  test.hpp  test_alternative_parser.cpp  test_ast_parsers.cpp  test_compiler.cpp  test_language.cpp  test_longest_common_prefix.cpp  test_main.cpp  test_pre_processing.cpp  test_recursive_variant.cpp  test_repetition_parser.cpp  test_runtime.cpp  test_sequence_parser.cpp  test_string_tokenizer.cpp  test_token_builder.cpp  test_token_factory.cpp  test_token_parsers.cpp  test_tokenizer.cpp  (+1 more)
